<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical"
    tools:context=".Fragments.DataEntryFragment">

<!--
    <TextView
        android:id="@+id/tvDisplayStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_new_user"
        android:gravity="center"
        android:textSize="20sp"/>
-->
    <EditText
        android:id="@+id/etFirstName"
        android:inputType="text"
        android:hint="@string/first_name"
        android:autofillHints="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etLastName"
        android:inputType="text"
        android:hint="@string/last_name"
        android:autofillHints="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:autofillHints="@string/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:autofillHints="@string/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etSkypeID"
        android:inputType="text"
        android:hint="@string/skype_id"
        android:autofillHints="@string/skype_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnAddUser"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add_user" />


</LinearLayout>